--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pago Prueba Condominio - PayPhone</title>
   <style>
-    body { font-family: Arial; text-align: center; margin-top: 80px; }
-    input, button { padding: 12px; margin: 10px; font-size: 18px; }
-    #loading { display: none; color: blue; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+      padding: 20px;
+      touch-action: manipulation; /* Optimizar para touch */
+    }
+
+    /* Optimizaciones para touch-screen */
+    input, button {
+      padding: 16px; /* Más padding para touch fácil */
+      margin: 12px;
+      font-size: 20px; /* Texto más grande */
+      min-height: 48px; /* Altura mínima para touch */
+      border-radius: 8px;
+      border: 2px solid #ccc;
+      touch-action: manipulation;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    button:hover, button:active {
+      background-color: #0056b3;
+      transform: scale(0.98); /* Feedback visual en touch */
+    }
+
+    input:focus, button:focus {
+      outline: 3px solid #007bff;
+      outline-offset: 2px;
+    }
+
+    #loading { display: none; color: blue; font-size: 18px; }
+
+    /* Responsive para diferentes tamaños de pantalla */
+    @media (max-width: 768px) {
+      body {
+        margin: 10px;
+        padding: 10px;
+      }
+
+      input, button {
+        width: 90%;
+        max-width: 300px;
+        font-size: 24px; /* Aún más grande en móviles */
+        padding: 20px;
+      }
+
+      h1 {
+        font-size: 24px;
+        margin: 20px 0;
+      }
+
+      .reglas-lista {
+        font-size: 18px;
+      }
+    }
     #error-container {
       display: none;
       background-color: #ffebee;
@@ -42,13 +101,22 @@
   </style>
 </head>
 <body>
-  <h1>Pago de cuotas - Prueba</h1>
-  <p>Ingresa el valor que deseas pagar (ej. 50.00)</p>
+  <h1>Pago de cuotas - Kiosko Condominio</h1>
+  <p>Ingresa tu edad para calcular el monto automáticamente</p>
 
-  <input type="number" step="0.01" id="monto" placeholder="50.00" required>
+  <input type="number" id="edad" placeholder="65" min="1" max="120" required>
   <br><br>
 
+  <div id="calculo-monto" style="margin: 20px auto; padding: 15px; background-color: #f0f8ff; border-radius: 8px; max-width: 300px; text-align: center; font-size: 16px; display: none;">
+    <strong>Monto a pagar: $<span id="monto-calculado">0.00</span></strong>
+  </div>
+
   <div style="margin: 20px auto; max-width: 300px; text-align: left; font-size: 14px; color: #666;">
+    <p><strong>Reglas de pago:</strong></p>
+    <ul>
+      <li>Mayor de 65 años: $50.00</li>
+      <li>65 años o menor: $100.00</li>
+    </ul>
     <p><strong>Nota importante:</strong></p>
     <p>Para pruebas en PayPhone, el teléfono debe estar registrado como "probador" en el panel de PayPhone.</p>
     <p>Si no tienes números registrados, contacta al administrador para configurar probadores.</p>
@@ -65,16 +133,50 @@
   </div>
 
   <script>
+    // Función para calcular monto basado en edad
+    function calcularMonto(edad) {
+      if (edad > 65) {
+        return 50.00; // Mayor de 65 años
+      } else {
+        return 100.00; // 65 años o menor
+      }
+    }
+
+    // Función para actualizar el cálculo en tiempo real
+    function actualizarCalculo() {
+      const edadInput = document.getElementById("edad");
+      const edad = parseInt(edadInput.value);
+
+      if (edad && edad > 0 && edad <= 120) {
+        const monto = calcularMonto(edad);
+        document.getElementById("monto-calculado").textContent = monto.toFixed(2);
+        document.getElementById("calculo-monto").style.display = "block";
+      } else {
+        document.getElementById("calculo-monto").style.display = "none";
+      }
+    }
+
+    // Event listener para cálculo en tiempo real
+    document.getElementById("edad").addEventListener("input", actualizarCalculo);
+
     async function iniciarPago() {
-      const monto = document.getElementById("monto").value;
-      if (!monto || monto <= 0) return alert("Ingresa un monto válido");
+      const edadInput = document.getElementById("edad");
+      const edad = parseInt(edadInput.value);
+
+      if (!edad || edad <= 0 || edad > 120) {
+        alert("Ingresa una edad válida (1-120 años)");
+        edadInput.focus();
+        return;
+      }
+
+      const monto = calcularMonto(edad);
 
       document.getElementById("loading").style.display = "block";
 
       const response = await fetch('/crear-pago', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ amount: monto })
+        body: JSON.stringify({ amount: monto.toString() })
       });
 
       const data = await response.json();
